--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -8,27 +8,9 @@
                 <h1 class="mx-0 mx-md-4 blog-post-title">{{ .Title }}</h1>
 
                 <div class="mb-md-4 meta">
-                    {{ if not .Params.noauthor }}
-                    {{ if .Params.author }}
-                    <span class="author" title="{{ .Params.Author }}">
-                        {{ .Params.author }}
-                    </span>
-                    {{ end }}
-                    {{ end }}
-
-                    <span class="date middot" title='{{ .Date.Format "Mon Jan 2 2006 15:04:05 MST" }}'>
+                    <span class="date" title='{{ .Date.Format "Mon Jan 2 2006 15:04:05 MST" }}'>
                         {{ .Date.Format  "2006-01-02" }}
                     </span>
-
-                    <div class="d-none d-md-inline tags">
-                        <ul class="list-unstyled d-inline">
-                            {{ range .Params.tags }}
-                            <li class="d-inline middot">
-                                <a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
-                            </li>
-                            {{ end }}
-                        </ul>
-                    </div>
                 </div>
 
                 <div class="markdown blog-post-content">
